methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:15: error: Unit does not take parameters
{
^MethodsDogHouse:28: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:34: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:44: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:54: error: not found: value dogHouse
		dogHouse();		
                ^